fix: align metadata values

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,10 @@
 .frontmatter-container {
   opacity: 0.75;
 
+  .frontmatter-container-header {
+    display: none;
+  }
+
   .frontmatter-section {
     border-bottom: 1px dashed var(--background-modifier-border);
 
@@ -21,8 +25,8 @@
         border-radius: 30px;
         color: var(--text-normal);
         font-size: 0.9em;
-        padding: 2px 8px;
-        margin: 2px 4px;
+        // padding: 2px 8px;
+        // margin: 2px 4px;
         line-height: 19px;
         border: 1px solid transparent;
         white-space: nowrap;
